# places_client

./: CHANGELOG.md  CONTRIBUTING.md  README.md  draft.ipynb  pyproject.toml  vignette.ipynb
docs/: Makefile  conf.py  example.ipynb  make.bat
src/places_client/: places_client.py
tests/: test_places_client.py
