[tool.poetry]
name = "places_client"
version = "0.1.0"
description = "Python package for extracting health data from CDC PLACES API"
authors = ["Yixiao Liu"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
