[tool.poetry]
name = "places_client"
version = "0.1.1"
description = "Python package for extracting health outcomes and health-risk behaviors data from CDC PLACES API"
authors = ["Yixiao Liu"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.3.3"
dotenv = "^0.9.9"
requests = "^2.32.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
